discussion/kv_engine/182726/182726_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53859: Expose Snappy datatype in KEYS_ONLY result for CouchKVStore

Couchstore compresses items at persistence if they do not already
have `datatype&Snappy` (and have a non-empty value). The datatype is
not altered at this time, but the fact that the item has been
compressed by Couchstore is recorded in the docinfo:

 docinfo->content_meta & COUCH_DOC_IS_COMPRESSED

However, when reading items, couchstore will:

* Decompress the value iff filter == VALUES_DECOMPRESSED
* Add Snappy to the datatype iff filter == VALUES_COMPRESSED

This means a KEYS_ONLY request may report a non-snappy datatype even if
the underlying value _is_ compressed.

This is not a problem, as a subsequent read of the value will have the
correct datatype, but is inconsistent with Magma and causes issues with
nexus testing. In general, it is good for the KVStore impls to behave
similarly.

Thus, change CouchKVStore to report a Snappy datatype to a KEYS_ONLY
request if it compressed the value when it was persisted.

Change-Id: I1df2883b3aae75578a5c30b58b72ffeffaae5472

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-11-16 10:07:03.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-16 10:36:41.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21859/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:416:9: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
        uint8_t expectedDatatype = PROTOCOL_BINARY_DATATYPE_XATTR;
        ^~~~~~~
        auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:417:34: error: use of undeclared identifier "willCompressAtPersistence" [clang-diagnostic-error]
        if (isFullEviction(h) && willCompressAtPersistence(h)) {
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:483:9: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
        uint8_t expectedDatatype = PROTOCOL_BINARY_DATATYPE_XATTR;
        ^~~~~~~
        auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:484:34: error: use of undeclared identifier "willCompressAtPersistence" [clang-diagnostic-error]
        if (isFullEviction(h) && willCompressAtPersistence(h)) {
                                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21859/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:417:34:
error: use of undeclared identifier "willCompressAtPersistence" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21859/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51137/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\ep_testsuite_xdcr.cc(417): error C3861: "willCompressAtPersistence": identifier not found ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51137/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/615/ : FAILURE

Compile error at [2022-11-16T10:30:13.839Z] ../kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:417:34:
error: ?willCompressAtPersistence? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/615/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24319/ : FAILURE

Compile error at [2022-11-16T10:34:37.795Z] ../kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:417:34:
error: ?willCompressAtPersistence? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24319/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11676/ : FAILURE

Compile error at [2022-11-16T10:23:51.775Z] ../kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:417:34:
error: ?willCompressAtPersistence? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11676/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11587/ : FAILURE

Compile error at [2022-11-16T10:30:38.543Z] ../kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:417:34:
error: use of undeclared identifier "willCompressAtPersistence"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11587/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23904/ : FAILURE

Compile error at [2022-11-16T10:33:34.023Z] ../kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:417:34:
error: ?willCompressAtPersistence? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23904/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25151/ : FAILURE

Compile error at [2022-11-16T10:33:00.745Z] ../kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:417:34:
error: use of undeclared identifier "willCompressAtPersistence"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25151/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32324/ : FAILURE

Compile error at [2022-11-16T10:36:13.343Z] ../kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:417:34:
error: use of undeclared identifier "willCompressAtPersistence"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32324/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23363/ : FAILURE

Compile error at [2022-11-16T10:22:32.758Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:417:34:
error: use of undeclared identifier "willCompressAtPersistence"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23363/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42914/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21214/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
